# geos

./: .appveyor.yml  .astylerc  .azure-pipelines.yml  .codecov.yml  .codespellrc  .cvsignore  .drone-1.0.yml  .drone.yml  .editorconfig  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitlab-ci.yml  .gitpod.yml  .mailmap  .travis.yml  .vimrc  404.html  AUTHORS  AUTOLINKTEST  Assert.cpp  CHANGES  CMakeLists.txt  CNAME  CODE_OF_CONDUCT.md  CTS.cpp  ChangeLog  ChangeLog.svn  Coordinate.cpp  CoordinateList.cpp  DEVELOPER-NOTES.md  DUMMY.md  Depth.cpp  Dimension.cpp  Envelope.cpp  Geometry.cpp  GeometryCollection.cpp  GeometryCollectionIterator.cpp  GeometryFactory.cpp  HOWTO_RELEASE  (+58 more)
benchmarks/: BenchmarkUtils.h  CMakeLists.txt  ClassSizes.cpp  Makefile.am  README.md
benchmarks/algorithm/: CMakeLists.txt  InteriorPointAreaPerfTest.cpp  LineIntersectorPerfTest.cpp  Makefile.am  OrientationIndexPerfTest.cpp  OrientationIndexStressTest.cpp  UnaryUnionSegmentsPerfTest.cpp  VoronoiPerfTest.cpp
benchmarks/capi/: CMakeLists.txt  GEOSCoordSeqPerfTest.cpp  GEOSGeom_transformXYPerfTest.cpp  GEOSPreparedContainsPerfTest.cpp  GEOSTopologyPreserveSimplifyStableTest.cpp  IntersectionPerfTest.cpp  Makefile.am  UnaryOpPerfTest.cpp  memleak_mp_prep.c
benchmarks/geom/: CMakeLists.txt  CoordinateSequencePerfTest.cpp  EnvelopePerfTest.cpp  PreparedPolygonIntersectsPerfTest.cpp  TopologyPredicatePerfTest.cpp
benchmarks/index/: CMakeLists.txt  SpatialIndexPerfTest.cpp
benchmarks/operation/: CMakeLists.txt  CoverageUnionPerfTest.cpp  DistancePerfTest.cpp  GridIntersectionPerfTest.cpp
capi/: CMakeLists.txt  Makefile.am  Makefile.in  geos_c.cpp  geos_c.cpp.bak  geos_c.h.in  geos_c.h.vc  geos_c.h.vc.in  geos_ts_c.cpp  geostest.c  test.expected  testrunner.sh
doc/: .cvsignore  CMakeLists.txt  Doxyfile  Doxyfile.in  Makefile  Makefile.am  README  check_doxygen_errors.cmake  example.cpp  example.tosql  examplemic  examplemic.cpp  geosDoxygen.conf
examples/: .gitignore  CMakeLists.txt  CPCLException.cpp  CoordinateSequencesExample.cpp  CustomCoordinateSequenceExample.cpp  CustomCoordinateSequenceExample.h  CustomPointCoordinateSequence.cpp  Makefile.am  README.md  capi_indexed_predicate  capi_indexed_predicate.c  capi_prepared.cpp  capi_read.cpp  capi_read_ts.c  capi_strtree.c  cpp_read.cpp  cpp_strtree.cpp
examples/client/: CMakeLists.txt  geos_c_client.cpp  geos_client.cpp
include/: CMakeLists.txt  Makefile.am  acconfig.h  geos.h
include/geos/: Makefile.am  constants.h  deprecated.h  export.h  geom.h  geomPrep.h  geomUtil.h  geomgraph.h  geomgraphindex.h  geosAlgorithm.h  indexBintree.h  indexChain.h  indexIntervalRTree.h  indexQuadtree.h  indexStrtree.h  indexSweepline.h  inline.h  io.h  namespaces.h  noding.h  nodingSnapround.h  opBuffer.h  opDistance.h  opLinemerge.h  opOverlay.h  opPolygonize.h  opPredicate.h  opRelate.h  opValid.h  operation.h  planargraph.h  platform.h.cmake  platform.h.disabled  platform.h.in  platform.h.vc  precision.h  profiler.h  spatialIndex.h  timeval.h  unload.h  (+4 more)
include/nlohmann/: include_nlohmann_json.hpp
php/: Makefile.am  README  TODO  geos.c  php_geos.h
php/test/: Makefile.am  crashme.php  test.php
source/: CTS.cpp  Makefile.am  Makefile.in  Makefile.vc  SimpleWKTTester.cpp  XMLTester.cpp  dirlist.mk  inlines.cpp
source/algorithm/: Angle.cpp  CGAlgorithms.cpp  CentroidArea.cpp  CentroidLine.cpp  CentroidPoint.cpp  ConvexHull.cpp  ConvexHull.java  HCoordinate.cpp  IntTreePointInRing.cpp  InteriorPointArea.cpp  InteriorPointLine.cpp  InteriorPointPoint.cpp  LineIntersector.cpp  MCPointInRing.cpp  Makefile.am  Makefile.in  MinimumDiameter.cpp  NonRobustCGAlgorithms.cpp  NonRobustLineIntersector.cpp  NotRepresentableException.cpp  PointInRing.cpp  PointLocator.cpp  RayCrossingCounter.cpp  RobustCGAlgorithms.cpp  RobustDeterminant.cpp  RobustLineIntersector.cpp  SIRtreePointInRing.cpp  SimplePointInAreaLocator.cpp  SimplePointInRing.cpp
source/bigtest/: GeometryTestFactory.cpp  Makefile.am  Makefile.in  TestSweepLineSpeed.cpp  bigtest.h
source/capi/: .cvsignore  Makefile.am  geos_c.cpp  geos_c.h  geos_c.h.in  geos_c.h.vc  geostest.c
source/examples/: .cvsignore  CPCLException.cpp  CoordinateListsExample.cpp  CoordinateSequencesExample.cpp  CustomCoordinateListExample.cpp  CustomCoordinateListExample.h  CustomCoordinateSequenceExample.cpp  CustomCoordinateSequenceExample.h  CustomPointCoordinateList.cpp  CustomPointCoordinateSequence.cpp  Makefile.am
source/geom/: BasicCoordinateList.cpp  Coordinate.cpp  CoordinateArraySequence.cpp  CoordinateArraySequenceFactory.cpp  CoordinateList.cpp  CoordinateListFactory.cpp  CoordinateSequence.cpp  CoordinateSequenceFactory.cpp  DefaultCoordinateSequence.cpp  DefaultCoordinateSequenceFactory.cpp  Dimension.cpp  Envelope.cpp  Geometry.cpp  GeometryCollection.cpp  GeometryCollectionIterator.cpp  GeometryComponentFilter.cpp  GeometryFactory.cpp  GeometryList.cpp  IntersectionMatrix.cpp  LineSegment.cpp  LineString.cpp  LinearRing.cpp  Location.cpp  Makefile.am  Makefile.in  MultiLineString.cpp  MultiPoint.cpp  MultiPolygon.cpp  Point.cpp  PointCoordinateList.cpp  PointCoordinateSequence.cpp  PointCoordinateSequenceFactory.cpp  Polygon.cpp  PrecisionModel.cpp  TopologyException.cpp  Triangle.cpp
source/geomgraph/: Depth.cpp  DirectedEdge.cpp  DirectedEdgeStar.cpp  Edge.cpp  EdgeEnd.cpp  EdgeEndStar.cpp  EdgeIntersection.cpp  EdgeIntersectionList.cpp  EdgeList.cpp  EdgeNodingValidator.cpp  EdgeRing.cpp  GeometryGraph.cpp  GraphComponent.cpp  Label.cpp  Node.cpp  NodeFactory.cpp  NodeMap.cpp  (+4 more)
src/: CMakeLists.txt  Makefile.am  Makefile.vc  dirlist.mk  info.plist.in  inlines.cpp
tests/: CMakeLists.txt  Makefile.am  README.md  superbuild.CMakeLists.txt
tools/: .cvsignore  CMakeLists.txt  Makefile.am  Makefile.in  astyle.sh  build-cmake.bat  codespell.ignore  cppcheck.sh  findclassfiles  geos-config.cmake  geos-config.in  geos.pc.cmake  geos.pc.in  geos_revision_cmake.h.in  geos_svn_revision_cmake.h.in  repo_revision.sh  svn_repo_revision.sh
util/: CMakeLists.txt  Makefile.am  OrientationIndexViewer.cpp
(+6229 files in other folders)
